--- a/index.html
+++ b/index.html
@@ -417,10 +417,16 @@
     const article = document.getElementById("articleRoot");
     const KEY = "lenape-guided-reading-progress-v3";
     const ENDPOINT_URL = "https://script.google.com/macros/s/AKfycbwsc5YkOZWBEIyn3SAYQRlppY5z7A3aRLknz-QQcpKnuUODhcY-xYAWHIk8UvkeD3QB/exec";
+    const PING_URL = ENDPOINT_URL + "?ping=1";
     const ASSIGNMENT_NAME = "1021 Native American Article";
     const DEVICE_ID_STORAGE_KEY = "lenape-guided-reading-device-id";
     const SUBMISSION_PREFIX = "LENAPE";
     const ANSWERS = { q1: "b", q2: "c", q3: "c", q4: "c", q5: "d" };
+    const HL_KEY = "lenape-article-highlights-v2"; // defined ONCE and reused
+
+    // Restore saved highlights BEFORE we query .chunk nodes or wire listeners
+    const savedArticle = localStorage.getItem(HL_KEY);
+    if (savedArticle) article.innerHTML = savedArticle;
 
     const chunks = Array.from(document.querySelectorAll(".chunk"));
     const resetBtn = document.getElementById("resetProgress");
@@ -620,7 +626,7 @@
       ];
     }
 
-    // ---- NEW: resilient posting with no-cors first ----
+    // ---- Resilient posting with no-cors first ----
     async function postToSheet(row) {
       if (!Array.isArray(row) || !row.length) return false;
 
@@ -854,17 +860,16 @@
       });
     });
 
-    // Connection check button
-    document.getElementById("pingEndpoint")?.addEventListener("click", () => {
+    // Connection check button — uses GET ?ping=1 so you see a PING row
+    document.getElementById("pingEndpoint")?.addEventListener("click", async () => {
       const status = document.getElementById("pingStatus");
-      status.textContent = "Pinging…";
-      postToSheet([
-        "PING-"+Date.now(),"","", "","", "","PING",
-        0,0,0,0,0, false,false,false,false,false,
-        0,0,0,0, 0,0, "ping"
-      ])
-      .then(ok => { status.textContent = ok ? "Connected" : "No response"; })
-      .catch(() => { status.textContent = "Error"; });
+      status.innerHTML = `Pinging… <a class="underline" target="_blank" rel="noopener" href="${PING_URL}">open ping</a>`;
+      try {
+        await fetch(PING_URL, { method: "GET", mode: "no-cors" });
+        status.textContent = "Ping sent — check sheet";
+      } catch {
+        status.textContent = "Error";
+      }
     });
 
     /* ========== Teacher Unlock: hold Shift+L for 3s ========== */
@@ -921,7 +926,6 @@
     });
 
     /* ========== Highlighter ========== */
-    const HL_KEY = "lenape-article-highlights-v2";
     const hlToggle = document.getElementById("hlToggle");
     const swBlue   = document.getElementById("swBlue");
     const swYellow = document.getElementById("swYellow");
@@ -1042,10 +1046,6 @@
       localStorage.removeItem(HL_KEY);
     }
     clearBtn?.addEventListener("click", clearAllHighlights);
-
-    // Restore saved highlights
-    const savedArticle = localStorage.getItem(HL_KEY);
-    if (savedArticle) article.innerHTML = savedArticle;
 
     /* ========== Anti-copy protections + toast ========== */
     document.addEventListener("contextmenu", (e) => {
