--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
   <section class="max-w-4xl mx-auto my-4 p-4 border rounded-lg bg-gray-50">
     <h4 class="font-semibold mb-2">Student Info</h4>
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
-      <label class="block text-sm">Student Name
-        <input id="siName" class="mt-1 w-full border rounded p-2" placeholder="Last, First" />
+      <label class="block text-sm">Student Name (First Name, Last Name)
+        <input id="siName" class="mt-1 w-full border rounded p-2" placeholder="First Name, Last Name" />
       </label>
       <label class="block text-sm">Timestamp (Eastern)
         <input id="siTimestamp" class="mt-1 w-full border rounded p-2 bg-gray-100" aria-live="polite" readonly />
@@ -391,6 +391,57 @@
         </div>
         <p id="submitStatus" class="text-sm" role="status" aria-live="polite"></p>
       </form>
+
+      <div class="mt-8 grid gap-4 md:grid-cols-2">
+        <section class="p-5 rounded-xl bg-white border border-purple-200 shadow-sm">
+          <h4 class="text-lg font-semibold text-purple-900 flex items-center gap-2">
+            <span class="inline-flex items-center justify-center h-9 w-9 rounded-full bg-purple-600 text-white font-bold">R.A.C.E</span>
+            Mini Anchor Chart
+          </h4>
+          <p class="mt-3 text-sm text-gray-700">Use each step to organize your thoughts before writing.</p>
+          <ol class="mt-4 space-y-3 text-sm text-gray-800">
+            <li class="flex gap-3">
+              <span class="font-semibold text-purple-700">R</span>
+              <span><strong>Restate</strong> the prompt in your own words to introduce your idea.</span>
+            </li>
+            <li class="flex gap-3">
+              <span class="font-semibold text-purple-700">A</span>
+              <span><strong>Answer</strong> the question clearly with your main point.</span>
+            </li>
+            <li class="flex gap-3">
+              <span class="font-semibold text-purple-700">C</span>
+              <span><strong>Cite</strong> a precise detail from the article that supports your answer.</span>
+            </li>
+            <li class="flex gap-3">
+              <span class="font-semibold text-purple-700">E</span>
+              <span><strong>Explain</strong> how the evidence proves your thinking and connects to your life.</span>
+            </li>
+          </ol>
+        </section>
+
+        <section class="p-5 rounded-xl bg-white border border-purple-200 shadow-sm">
+          <h4 class="text-lg font-semibold text-purple-900">R.A.C.E. Paragraph Rubric</h4>
+          <p class="mt-2 text-sm text-gray-700">Check each box to make sure your paragraph shines.</p>
+          <ul class="mt-4 space-y-3 text-sm text-gray-800">
+            <li class="flex items-start gap-3">
+              <span class="mt-1 h-3 w-3 rounded-full bg-green-400"></span>
+              <span><strong>Restate &amp; Answer:</strong> Open with the prompt in your words and share a clear response.</span>
+            </li>
+            <li class="flex items-start gap-3">
+              <span class="mt-1 h-3 w-3 rounded-full bg-blue-400"></span>
+              <span><strong>Evidence:</strong> Include a specific fact or quote from the article to support your thinking.</span>
+            </li>
+            <li class="flex items-start gap-3">
+              <span class="mt-1 h-3 w-3 rounded-full bg-purple-400"></span>
+              <span><strong>Explanation:</strong> Connect the evidence to your experiences, feelings, or actions.</span>
+            </li>
+            <li class="flex items-start gap-3">
+              <span class="mt-1 h-3 w-3 rounded-full bg-yellow-400"></span>
+              <span><strong>Writing Moves:</strong> Use complete sentences, transition words, and a positive closing thought.</span>
+            </li>
+          </ul>
+        </section>
+      </div>
     </section>
   </div>
 
