--- a/index.html
+++ b/index.html
@@ -392,31 +392,15 @@
         <p id="submitStatus" class="text-sm" role="status" aria-live="polite"></p>
       </form>
 
-      <div class="mt-8 grid gap-4 md:grid-cols-2">
+      <div class="mt-8 space-y-4">
         <section class="p-5 rounded-xl bg-white border border-purple-200 shadow-sm">
-          <h4 class="text-lg font-semibold text-purple-900 flex items-center gap-2">
-            <span class="inline-flex items-center justify-center h-9 w-9 rounded-full bg-purple-600 text-white font-bold">R.A.C.E</span>
-            Mini Anchor Chart
-          </h4>
-          <p class="mt-3 text-sm text-gray-700">Use each step to organize your thoughts before writing.</p>
-          <ol class="mt-4 space-y-3 text-sm text-gray-800">
-            <li class="flex gap-3">
-              <span class="font-semibold text-purple-700">R</span>
-              <span><strong>Restate</strong> the prompt in your own words to introduce your idea.</span>
-            </li>
-            <li class="flex gap-3">
-              <span class="font-semibold text-purple-700">A</span>
-              <span><strong>Answer</strong> the question clearly with your main point.</span>
-            </li>
-            <li class="flex gap-3">
-              <span class="font-semibold text-purple-700">C</span>
-              <span><strong>Cite</strong> a precise detail from the article that supports your answer.</span>
-            </li>
-            <li class="flex gap-3">
-              <span class="font-semibold text-purple-700">E</span>
-              <span><strong>Explain</strong> how the evidence proves your thinking and connects to your life.</span>
-            </li>
-          </ol>
+          <h4 class="text-lg font-semibold text-purple-900">R.A.C.E. Quick Reminder</h4>
+          <p class="mt-2 text-sm text-gray-800">
+            Start with <strong>one sentence</strong> that restates the prompt and gives your answer at the same time. Example: <em>"The question asks how teamwork helps our class, so teamwork helps because we share the jobs and cheer each other on."</em>
+          </p>
+          <p class="mt-2 text-sm text-gray-700">
+            After that sentence, include evidence from the article and explain how it connects to your own actions or feelings.
+          </p>
         </section>
 
         <section class="p-5 rounded-xl bg-white border border-purple-200 shadow-sm">
@@ -425,7 +409,7 @@
           <ul class="mt-4 space-y-3 text-sm text-gray-800">
             <li class="flex items-start gap-3">
               <span class="mt-1 h-3 w-3 rounded-full bg-green-400"></span>
-              <span><strong>Restate &amp; Answer:</strong> Open with the prompt in your words and share a clear response.</span>
+              <span><strong>Restate &amp; Answer:</strong> Open with the prompt in your own words and answer it clearly in the same sentence.</span>
             </li>
             <li class="flex items-start gap-3">
               <span class="mt-1 h-3 w-3 rounded-full bg-blue-400"></span>
