--- a/index.html
+++ b/index.html
@@ -485,7 +485,9 @@
     /* ========== Guided Reading (always ON) ========== */
     const article = document.getElementById("articleRoot");
     const KEY = "lenape-guided-reading-progress-v3";
-    const ENDPOINT_URL = "https://formspree.io/f/mvgwnvjk";
+    // === Google Form wiring ===
+    const FORM_ACTION = "https://docs.google.com/forms/d/e/1FAIpQLSfWwARP2lqp_fyxOZWXBK2jvWsvCMXI9mBBIAQ4gRuet_TnmQ/formResponse";
+    const ENTRY_KEY   = "entry.1622586096"; // 'payload' field
     const ASSIGNMENT_NAME = "1021 Native American Article";
     const HEADER_KEYS = [
       "submission_id","submitted_at_iso","submitted_at_et","student_name","period",
@@ -702,24 +704,36 @@
       ];
     }
 
-    // ---- Send to Formspree instead of Google Sheets ----
-    async function postToFormspree(row) {
-      // Turn the row array into a named object using your header keys
-      const payload = Object.fromEntries(HEADER_KEYS.map((k, i) => [k, row[i] ?? ""]));
-
+    // Submit to Google Form via hidden form (no CORS issues)
+    function postToForm(rowArrayOrString) {
       try {
-        const res = await fetch(ENDPOINT_URL, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "Accept": "application/json"    // <-- important for Formspree CORS
-          },
-          body: JSON.stringify(payload)
-        });
-        return res.ok;
+        const form = document.getElementById("gform");
+        const input = document.getElementById("gformPayload");
+        if (!form || !input) {
+          console.warn("Google Form elements not found.");
+          return Promise.resolve(false);
+        }
+
+        // Build JSON string payload
+        const payload = Array.isArray(rowArrayOrString)
+          ? JSON.stringify(rowArrayOrString)
+          : (typeof rowArrayOrString === "string" ? rowArrayOrString : JSON.stringify(rowArrayOrString));
+
+        // Safety: Google Form requires the input name to be the entry key
+        input.setAttribute("name", ENTRY_KEY);
+        input.value = payload;
+
+        // Safety: ensure action points at your Form
+        if (form.getAttribute("action") !== FORM_ACTION) {
+          form.setAttribute("action", FORM_ACTION);
+        }
+
+        // Submit without leaving the page
+        form.submit();
+        return Promise.resolve(true);
       } catch (err) {
-        console.warn("Formspree error:", err);
-        return false;
+        console.error("postToForm error", err);
+        return Promise.resolve(false);
       }
     }
 
@@ -948,25 +962,25 @@
       showToast("Submission saved!");
 
       const csvRow = buildSubmissionRow(progress, responseText);
-      postToFormspree(csvRow).then(ok => {
+      postToForm(csvRow).then(ok => {
         if (ok) {
-          showToast("Sent to Formspree");
+          showToast("Sent to form");
           if (submitStatus) {
-            submitStatus.textContent = "Submitted and recorded (Formspree). Further submissions from this device are locked.";
+            submitStatus.textContent = "Submitted and recorded on form responses.";
             submitStatus.className = "text-sm text-green-700";
           }
         } else {
-          showToast("Could not reach Formspree. Saved locally.");
+          showToast("Could not submit. Saved locally.");
           if (submitStatus) {
-            submitStatus.textContent = "Saved locally on this device. Please show your teacher; submissions are locked.";
+            submitStatus.textContent = "Saved locally. Try again later.";
             submitStatus.className = "text-sm text-yellow-700";
           }
         }
       }).catch(err => {
-        console.error("Formspree submit error", err);
-        showToast("Could not reach Formspree. Saved locally.");
+        console.error("postToForm error", err);
+        showToast("Could not submit. Saved locally.");
         if (submitStatus) {
-          submitStatus.textContent = "Saved locally on this device. Please show your teacher; submissions are locked.";
+          submitStatus.textContent = "Saved locally. Try again later.";
           submitStatus.className = "text-sm text-yellow-700";
         }
       });
@@ -976,20 +990,15 @@
       const status = document.getElementById("pingStatus");
       status.textContent = "Pinging…";
 
-      // Minimal row that still matches your header order
-      postToFormspree([
-        `PING-${Date.now()}`,                     // submission_id
-        new Date().toISOString(),                // submitted_at_iso
-        progress.profile?.timestampEastern || "",// submitted_at_et
-        progress.profile?.studentName || "",     // student_name
-        progress.profile?.period || "",          // period
-        progress.deviceId || getOrCreateDeviceId(), // device_id
-        ASSIGNMENT_NAME,                         // assignment
-        0,0,0,0,0,                                // q*_attempts
-        false,false,false,false,false,            // q*_correct
-        0,0,0,0,                                  // chunks/attempts/score/percent
-        0,0,                                      // reflection_words/chars
-        "ping"                                    // reflection_text
+      postToForm([
+        "PING-" + Date.now(), // submission_id
+        new Date().toISOString(), // submitted_at_iso
+        "", "", "", "", "PING",    // submitted_at_et, student_name, period, device_id, assignment
+        0,0,0,0,0,                  // q*_attempts
+        false,false,false,false,false, // q*_correct
+        0,0,0,0,                    // chunks_completed,total_attempts,score_correct,score_percent
+        0,0,                        // reflection_words, reflection_chars
+        "ping"                      // reflection_text
       ])
       .then(ok => { status.textContent = ok ? "Connected" : "No response"; })
       .catch(() => { status.textContent = "Error"; });
@@ -1781,5 +1790,14 @@
     select.addEventListener("change", () => setLang(select.value));
   })();
   </script>
+
+  <!-- Hidden target so the page doesn't navigate when we submit to Google Form -->
+  <iframe name="gform_iframe" style="display:none;"></iframe>
+
+  <!-- Hidden Google Form POST. Only one field: 'payload' (the JSON string) -->
+  <form id="gform" action="https://docs.google.com/forms/d/e/1FAIpQLSfWwARP2lqp_fyxOZWXBK2jvWsvCMXI9mBBIAQ4gRuet_TnmQ/formResponse"
+        method="POST" target="gform_iframe" style="display:none;">
+    <input type="hidden" name="entry.1622586096" id="gformPayload">
+  </form>
 </body>
 </html>
